--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +7,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>San Valentin Carta 1v</title>
+    <title>Sorpresa</title>
 </head>
 <body>
-    <h1>¡Feliz San Valentín! ❤️</h1>
+    <h1>¡Espero te guste este pequeño detalle! ❤️</h1>
     <div class="contenedor">
         <div class="envoltura-sobre">
             <div class="sobre">
                 <div class="carta">
                     <div class="contenido">
-                        <strong>Querida Estrella</strong>
+                        <strong>Mi niña...</strong>
                         <p>
-                            Hoy es <strong>San Valentín</strong>, el día oficial de los <em>corazones</em>, el <em>chocolate</em> y las declaraciones de amor dramáticas (como en las telenovelas). Así que prepárate, porque aquí va la mía: Desde que te conocí, mi corazón late más rápido que <code>WiFi</code> gratis en una plaza pública. Eres más brillante que un mensaje de "<strong>te amo</strong>" en <strong>LED gigante</strong> y más dulce que el doble de caramelo en un café con extra de crema. Si fueras un algoritmo, serías el más eficiente: optimizas mi felicidad con la menor cantidad de esfuerzo. Si fueras un bug, serías el único que no querría corregir. Y si fueras una aplicación, serías la que siempre tengo anclada en mi pantalla principal. Gracias por hacer de mi vida una versión mejorada, sin errores (bueno, quizá con algunos, pero todos adorables). <br> <strong>Feliz San Valentín</strong>, mi <em>estrella favorita</em>. <br> Con mucho <strong>código</strong> (y <strong>amor</strong>), <br> Tu programador enamorado. <br> <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Eres lo mejor que me ha pasado."</code>
+                            Hola corazón,  
+me tomé un momento para hacerte este pequeño detalle 💌.  
+Desde que empezamos a hablar, he sentido que algo especial crece dentro de mí cada día.  
+Aunque la distancia nos separe, mi cariño por ti se hace más fuerte con cada mensaje, cada llamada y cada recuerdo que compartimos.  
+
+Quiero que sepas que pienso en ti constantemente y que sueño con el día en que podamos estar juntos, sin kilómetros de por medio.  
+Eres mi alegría, mi inspiración y mi razón para sonreír.  <br> <code>"Hay algo que quiero decirte desde hace tiempo."</code>
                         </p>
+                        <div style="text-align: center;">
+                            <button class="boton-carta" onclick="abrirOtraPagina()">Haz clic aquí</button>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
