--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Desde que empezamos a hablar, he sentido que algo especial crece dentro de mí c
 Aunque la distancia nos separe, mi cariño por ti se hace más fuerte con cada mensaje, cada llamada y cada recuerdo que compartimos.  
 
 Quiero que sepas que pienso en ti constantemente y que sueño con el día en que podamos estar juntos, sin kilómetros de por medio.  
-Eres mi alegría, mi inspiración y mi razón para sonreír.  <br> <code>"Hay algo que quiero decirte desde hace tiempo."</code>
+Eres mi alegría, mi inspiración y mi razón para sonreír. Recuerdas que te dije que estaba preparando algo? era esto. <br> <code>"Hay algo que quiero decirte desde hace tiempo."</code>
                         </p>
                         <div style="text-align: center;">
                             <button class="boton-carta" onclick="abrirOtraPagina()">Haz clic aquí</button>
